--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "start": "node server",
     "test": "lab -a @hapi/code -I \"__core-js_shared__,CSS,regeneratorRuntime,core\" -L",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "hpal": "hpal"
   },
   "dependencies": {
     "@hapi/boom": "^9.1.4",
@@ -22,6 +23,7 @@
     "@hapipal/schwifty": "6.x.x",
     "joi": "17.x.x",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.10.0",
     "objection": "2.x.x",
     "prettier": "^3.4.2"
   },
@@ -39,7 +41,7 @@
     "@hapi/lab": "24.x.x",
     "@hapi/vision": "6.x.x",
     "@hapipal/confidence": "6.x.x",
-    "@hapipal/hpal": "3.x.x",
+    "@hapipal/hpal": "^3.1.0",
     "@hapipal/hpal-debug": "2.x.x",
     "@hapipal/toys": "3.x.x",
     "babel-eslint": "10.x.x",
